# mindset-BE

./: .flaskenv  README.md  app.py  pyproject.toml  schema.graphql
tests/: test_mindset_be.py
