[tool.poetry]
name = "mindset-be"
version = "0.1.0"
description = ""
authors = ["Jon <25947147+JonrGull@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
ariadne = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
